fix: add standard line-clamp property for compatibility

--- a/public/index.html
+++ b/public/index.html
@@ -111,6 +111,7 @@
       line-height: 1.5; 
       display: -webkit-box;
       -webkit-line-clamp: 3;
+      line-clamp: 3;
       -webkit-box-orient: vertical;
       word-break: break-all;
       background: #f9fafb; 
