fix(ui): 修复自动刷新时展开状态的二级表格插入问题
- 调用insertTasksDetail时传入正确的afterRow参数
- 确保二级表格插入到正确的批次行之后
- 保持5秒自动刷新时的展开状态
- 用户展开的二级表格不会消失又重新出现

--- a/public/index.html
+++ b/public/index.html
@@ -668,7 +668,7 @@ async function loadBatches(silent = false) {
     
     // 如果已展开，插入二级表格
     if (isExpanded) {
-      insertTasksDetail(tbody, batch.id);
+      insertTasksDetail(tbody, batch.id, tr);
     }
   });
   
