--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AI视频批量生成</title>
-  <link rel="stylesheet" href="/css/app.css" />
+    <link rel="stylesheet" href="/css/app.css?v=20251113-1" />
 </head>
 <body>
 <div id="toast-container"></div>
@@ -114,6 +114,6 @@
     </div>
   </div>
 
-  <script type="module" src="/js/app.js"></script>
+    <script type="module" src="/js/app.js?v=20251113-1"></script>
 </body>
 </html>
